# mfg-drone

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
backend/app/: config.py  logging_config.py  main.py  routes.py  schemas.py  state_machine.py
backend/app/drone/: base.py  mock.py
docs/: architecture.md  milestones.md  safety.md  spec.md
frontend/: app.js  index.html  style.css
reference/: tello-edu-connect.md  tello-sdk2.md
tests/: test_routes.py  test_state_machine.py
